# schrodinger-plugin-ocr

./: Cargo.toml  plugin.json
.github/workflows/: release.yml
src/: lib.rs
